# knowrob_robcog

./: .gitignore  CMakeLists.txt  README.md  build.gradle  package.xml  u_0_Rating.owl
knowrob_robcog/: build.gradle
knowrob_robcog/src/main/java/org/knowrob/knowrob_robcog/: MongoRobcogQueries.java
knowrob_robcog/src/main/java/org/knowrob/knowrob_unreal/: MongoUnrealConn.java  MongoUnrealQueries.java
owl/: SemanticMap.owl  SemanticMap_old.owl  dm-market-iai.owl  iai_kitchen_furniture.owl  knowrob_sherpa.owl  unreal_events.owl
owl/unreal/u_0_2016.02.03-07.27.39/: u_0_EventData.owl
owl/unreal/u_1_2016.02.03-08.34.00/: u_1_EventData.owl
owl/unreal/u_2_2016.02.03-08.38.29/: u_2_EventData.owl
prolog/: Thesis.pl  analyse_semantic_map.pl  display_types_service_calls.pl  display_types_test.pl  highlighting_queries.pl  init.pl  prolog_service_calls.pl  robcog_event_logic.pl  robcog_games.pl  robcog_mongo_interface.pl  robcog_mongo_queries.pl  robcog_sort_kitchen.pl  robcog_test_queries.pl  spawn_semantic_map.pl  spawn_semantic_map_one_service_call.pl
src/: display_types_service_calls.cpp  prolog_service_calls.cpp
