<?xml version="1.0"?>
<package>
  <name>knowrob_robcog</name>
  <version>0.1.0</version>
  <description>The knowrob_robcog package</description>

  <maintainer email="bveit@uni-bremen.com">Björn Veit</maintainer>

  <author>Björn Veit</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>world_control_msgs</buildtool_depend>
  <buildtool_depend>unreal_vis_msgs</buildtool_depend>

  <build_depend>world_control_msgs</build_depend>
  <run_depend>world_control_msgs</run_depend>

  <build_depend>unreal_vis_msgs</build_depend>
  <run_depend>unreal_vis_msgs</run_depend>

  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosprolog</build_depend>

  <run_depend>knowrob_maps</run_depend>
  <run_depend>knowrob_objects</run_depend>

  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>roscpp</run_depend>

  <run_depend>rosprolog</run_depend>


</package>
